--- a/styles/style.css
+++ b/styles/style.css
@@ -13,19 +13,341 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  align-items: center;
+  background-color: #f2f2f2;
+  margin-bottom: 100px;
+  justify-content: center;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.logo {
+  height: 32px;
+  width: 183px;
+  display: flex;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__title {
+  position: absolute;
+  align-items: center;
+  width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  left: 64px;
+  z-index: 3;
+  flex-direction: column;
+}
+
+.header__subtitle {
+  position: absolute;
+  font-size: 18px;
+  line-height: 25px;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  z-index: 3;
+}
+
+.header__main-illustration {
+  background-image: url(".././images/header-image.png");
+  background-size: cover;
+  width: 765px;
+  height: 608px;
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.header__square-pic {
+  background-color: #2f80ed;
+  height: 568px;
+  width: 568px;
+  z-index: 0;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  display: block;
+}
+
+.content {
+  display: flex;
+  top: 100px;
+  flex-direction: column;
+}
+
+.description {
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.two-columns {
+  display: flex;
+  width: 80%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+
+}
+.two-columns_span-accent {
+  margin-bottom: 30px;
+  line-height: 34px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-weight: normal;
+  font-size: 24px;
+}
+
+.digits {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto 100px;
+}
+
+.digits__section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto 20px;
+}
+
+.digits__section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+}
+
+.digits__table {
+  justify-content: space-between;
+  width: 1100px;
+  margin: 0 auto 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.digits__cell {
+  width: 250px;
+  position: relative;
+  margin-top: 60px;
+}
+
+.cell__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.cell__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman {
+  min-height: 760px;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-image: url(".././images/feynman.png");
+  background-size: 867px 637px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-color: #f2f2f2;
+  position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  align-self: center;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 1;
+  margin: 0 auto 70px;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  align-self: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feynman__link {
+  width: 240px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  top: 50%;
+  right: 48px;
+  color: #000;
+  z-index: 1;
+  position: absolute;
+}
+
+.kaufman {
+  height: 100%;
+  justify-content: center;
+  background-color: #1f1f1f;
+  margin-top: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: 90px;
+}
+
+.kaufman__section-title {
+  width: 60%;
+  margin: 0 auto 0;
+  padding-top: 90px;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  color: #fff;
+  z-index: 1;
+}
+
+.kaufman__section-subtitle {
+  width: 60%;
+  margin: 20px auto 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: #fff;
+  z-index: 1;
+}
+
+.kaufman__table {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 0 auto 90px;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.triangle {
+  position: absolute;
+  right: -210px;
+  z-index: 0;
+  width: 877px;
+  height: 877px;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding: 60px 40px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: #fff;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  order: 1;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0 18px;
+  align-self: flex-end;
+  order: 2;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 5px;
+}
+
+.footer__list {
+  list-style: none;
+  margin: 20px 0 16px;
+  padding: 0;
 }
