--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -19,7 +15,6 @@
   margin-bottom: 100px;
   justify-content: center;
   position: relative;
-  /* выше установили ограничения для секции */
 }
 
 .logo {
@@ -38,23 +33,29 @@
 .header__title {
   position: absolute;
   align-items: center;
-  width: 730px;
+  max-width: 730px;
   font-size: 102px;
   line-height: 96px;
   font-weight: bold;
   left: 64px;
   z-index: 3;
-  flex-direction: column;
+  margin: 0;
+}
+
+.link {
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__subtitle {
   position: absolute;
   font-size: 18px;
   line-height: 25px;
-  width: 388px;
+  max-width: 388px;
   left: 64px;
   bottom: 30px;
   z-index: 3;
+  margin: 0;
 }
 
 .header__main-illustration {
@@ -85,6 +86,36 @@
   flex-direction: column;
 }
 
+/* группа классов модуля section, описывающих повторяющиеся элементы страницы*/
+.section-title {
+  font-weight: bold;
+  text-align: center;
+}
+
+.section-subtitle {
+  font-weight: normal;
+  text-align: center;
+}
+
+.table {
+  justify-content: space-between;
+  margin: 0 auto 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
 .description {
   align-items: center;
   margin-bottom: 100px;
@@ -93,24 +124,24 @@
 .two-columns {
   display: flex;
   width: 80%;
-  flex-wrap: wrap;
   justify-content: space-between;
   margin: auto;
 }
 
 .two-columns__brief {
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
+  margin: 0;
 }
 
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-
 }
+
 .two-columns_span-accent {
   margin-bottom: 30px;
   line-height: 34px;
@@ -122,6 +153,7 @@
   line-height: 34px;
   font-weight: normal;
   font-size: 24px;
+  margin: 0;
 }
 
 .digits {
@@ -131,56 +163,38 @@
   margin: 0 auto 100px;
 }
 
-.digits__section-title {
+.section-title_place_digits {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
-  font-weight: bold;
-  text-align: center;
   margin: 0 auto 20px;
 }
 
-.digits__section-subtitle {
+.section-subtitle_place_digits {
   width: 60%;
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
-  text-align: center;
   margin: 0;
 }
 
-.digits__table {
-  justify-content: space-between;
+.table_place_digits {
   width: 1100px;
-  margin: 0 auto 0;
-  display: flex;
-  flex-wrap: wrap;
 }
 
-.digits__cell {
+.cell_place_digits {
   width: 250px;
   position: relative;
   margin-top: 60px;
 }
 
-.cell__heading {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.cell__text {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
+.table__heading_place_digits {
+  margin: 0 0 20px;
 }
 
 .feynman {
   min-height: 760px;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   background-image: url(".././images/feynman.png");
   background-size: 867px 637px;
@@ -188,38 +202,35 @@
   background-position: left bottom;
   background-color: #f2f2f2;
   position: relative;
+  padding-top: 100px;
 }
 
-.feynman__title {
+.section-title_place_feynman {
   width: 648px;
-  align-self: center;
-  text-align: center;
   line-height: 1.15;
   font-size: 120px;
-  font-weight: bold;
   z-index: 1;
   margin: 0 auto 70px;
 }
 
-.feynman__subtitle {
-  text-align: center;
-  align-self: center;
+.section-subtitle_place_feynman {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
+  margin: 0;
 }
 
-.feynman__link {
+.link_place_feynman {
   width: 240px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   top: 50%;
   right: 48px;
-  color: #000;
   z-index: 1;
   position: absolute;
+  margin: 0;
 }
 
 .kaufman {
@@ -232,49 +243,42 @@
   flex-direction: column;
   position: relative;
   padding-top: 90px;
+  padding-bottom: 90px;
 }
 
-.kaufman__section-title {
+.section-title_theme_dark {
   width: 60%;
   margin: 0 auto 0;
-  padding-top: 90px;
-  text-align: center;
   line-height: 69px;
   font-size: 60px;
-  font-weight: bold;
   color: #fff;
   z-index: 1;
 }
 
-.kaufman__section-subtitle {
+.section-subtitle_theme_dark {
   width: 60%;
   margin: 20px auto 0;
-  text-align: center;
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
   color: #fff;
   z-index: 1;
 }
 
-.kaufman__table {
+.table_theme_dark {
   width: 80%;
+  margin: 0 auto 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin: 0 auto 90px;
-  z-index: 1;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  color: #fff;
+  margin: 80px 0 0;
   z-index: 1;
 }
 
-.triangle {
+.kaufman__triangle {
   position: absolute;
   right: -210px;
   z-index: 0;
@@ -287,15 +291,12 @@
   background-color: #1f1f1f;
   padding: 60px 40px;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
 
 .footer__columns {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   color: #fff;
   width: 90%;
   justify-content: space-between;
@@ -303,10 +304,9 @@
 
 .footer__column_content_copyright {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  flex-basis: 711px;
 }
 
 .logo_place_footer {
@@ -320,7 +320,6 @@
   font-size: 18px;
   font-weight: normal;
   margin: 18px 0 18px;
-  align-self: flex-end;
   order: 2;
 }
 
