--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@
   padding-left: 64px;
 }
 
-.link {
+.header__link {
   color: #2f80ed;
   text-decoration: none;
 }
@@ -56,7 +56,7 @@
 }
 
 .header__main-illustration {
-  background-image: url(".././images/header-image.png");
+  /*background-image: url(".././images/header-image.png");*/
   background-size: cover;
   width: 765px;
   height: 608px;
@@ -87,24 +87,40 @@
 .section-title {
   font-weight: bold;
   text-align: center;
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  margin: 0 auto 20px;
 }
 
 .section-subtitle {
   font-weight: normal;
   text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  margin: 0 auto 0;
 }
 
 .table {
+  width: 1100px;
   justify-content: space-between;
   margin: 0 auto 0;
   display: flex;
   flex-wrap: wrap;
 }
 
+.table__cell {
+  width: 250px;
+  position: relative;
+  margin-top: 60px;
+}
+
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin: 0 0 20px;
 }
 
 .table__text {
@@ -147,7 +163,7 @@
   line-height: 34px;
   font-weight: normal;
   font-size: 24px;
-  margin: 0;
+  margin: 0 auto 30px;
 }
 
 .two-columns__paragraph:last-child {
@@ -159,34 +175,6 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto 100px;
-}
-
-.section-title_place_digits {
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  margin: 0 auto 20px;
-}
-
-.section-subtitle_place_digits {
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  margin: 0;
-}
-
-.table_place_digits {
-  width: 1100px;
-}
-
-.cell_place_digits {
-  width: 250px;
-  position: relative;
-  margin-top: 60px;
-}
-
-.table__heading_place_digits {
-  margin: 0 0 20px;
 }
 
 .feynman {
@@ -203,7 +191,7 @@
   padding-top: 100px;
 }
 
-.section-title_place_feynman {
+.feynman__section-title {
   max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -211,15 +199,16 @@
   margin: 0 auto 70px;
 }
 
-.section-subtitle_place_feynman {
+.feynman__section-subtitle {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  align-self: center;
   z-index: 1;
   margin: 0;
 }
 
-.link_place_feynman {
+.feynman__link {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -228,6 +217,8 @@
   z-index: 1;
   position: absolute;
   margin: 0;
+  color: #2f80ed;
+  text-decoration: none;
 }
 
 .kaufman {
