--- a/styles/style.css
+++ b/styles/style.css
@@ -171,8 +171,6 @@
 }
 
 .digits {
-  display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto 100px;
 }
@@ -192,6 +190,7 @@
 }
 
 .feynman__section-title {
+  text-align: center;
   max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
@@ -235,19 +234,15 @@
 }
 
 .section-title_theme_dark {
-  width: 60%;
   margin: 0 auto 0;
   line-height: 69px;
-  font-size: 60px;
   color: #fff;
   z-index: 1;
 }
 
 .section-subtitle_theme_dark {
-  width: 60%;
   margin: 20px auto 0;
   line-height: 34px;
-  font-size: 24px;
   color: #fff;
   z-index: 1;
 }
