Внесены изменения согласно замечаниям: исправлено расположение файлов со стилями модификатором и normalize.css. Исправлены ошибки в стилях, анимированный блок используется миксом.

--- a/blocks/content/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/content/kaufman/__triangle/kaufman__triangle.css
@@ -1,11 +1,8 @@
 .kaufman__triangle {
   background-image: url("../../../../images/kaufman-triangle.svg");
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  right: -210px;
+  background-size: contain;
   z-index: 0;
-  min-width: 877px;
-  min-height: 877px;
-  animation: rotation 20s ease-in-out infinite;
+  width: 877px;
+  height: 877px;
+  position: relative;
 }
