--- a/blocks/content/khan/__book-pic/khan__book-pic.css
+++ b/blocks/content/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,7 @@
 .khan__book-pic {
   margin-right: 48px;
   width: 620px;
-  background-size: contain;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
 }
