--- a/blocks/content/resources/__logo/resources__logo.css
+++ b/blocks/content/resources/__logo/resources__logo.css
@@ -1,4 +1,10 @@
 .resources__logo {
   width: 270px;
   height: 38px;
+  transition: opacity 1s;
+}
+
+.resources__logo:hover {
+  transition: opacity 2s;
+  opacity: 20%;
 }
