--- a/blocks/content/video/__iframe/video__iframe.css
+++ b/blocks/content/video/__iframe/video__iframe.css
@@ -1,13 +1,5 @@
 .video__iframe {
   border: 0;
-}
-
-.video__iframes:nth-child(1) {
-  bottom: -60px;
-  left: 0;
-}
-
-.video__iframe:nth-child(2) {
-  bottom: -60px;
-  right: 0;
+  width: 516px;
+  height: 316px;
 }
