--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -2,7 +2,7 @@
   min-height: 790px;
   display: flex;
   flex-direction: column;
-  background-image: url("../../../images/feynman.png");
+  background-image: url("../../images/feynman.png");
   background-size: 867px 637px;
   background-repeat: no-repeat;
   background-position: left bottom;
